--- a/resources/assets/sass/token.scss
+++ b/resources/assets/sass/token.scss
@@ -114,11 +114,6 @@
                 padding-top: 49px;
             }
 
-            & > .container-fluid {
-                padding-left: 0;
-                padding-right: 0;
-            }
-
             .inxtDatum {
 
                 text-align: center;
